--- a/app/globals.css
+++ b/app/globals.css
@@ -20,18 +20,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.text {
+#@text {
   font-size: 24px;
   font-family: Arial, sans-serif;
   transition: text-shadow 0.5s ease-out;
 }
 
-.text:hover {
+#text:hover {
   text-shadow: 0 0 0.1em black;
 }
 
 /* Animate the text shadow on hover */
-.text:hover {
+#text:hover {
   animation: hover-effect 2s linear infinite;
 }
 
