--- a/styles/style.css
+++ b/styles/style.css
@@ -44,10 +44,10 @@
 	justify-content:space-around;
 }
 #nav-item{
-	font-family: "Climate-Crisis";
 	font-size:40px;
 	color:white;
   	-webkit-text-stroke: 2px #4158D9;
+  	letter-spacing: .1rem;
 }
 #nav-item:hover{
         color:#4158D9;
