--- a/styles/style2.css
+++ b/styles/style2.css
@@ -10,18 +10,20 @@ header{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	margin-right: 2%;
+}
+#logo-a{
+	width:15%;
+	margin-right:10%;
 }
 #logo2{
-	width:20%;
-	padding-right:20%;
 	
 }
 
 .nav-item{
-	font-family: "Climate-Crisis79";
 	font-size:40px;
 	color:white;
-	margin: 2%;
+	margin: 2% 2% 3% 2%;
   	-webkit-text-stroke: 2px #4158D9;
 }
 #nav-present{
@@ -50,7 +52,7 @@ header{
 	margin:0% 5% 0% 5%;
 }
 /*TEAM STUDIO*/ 
-.row1{ /*ALSO USE IN CREDITS*/
+.row{ /*ALSO USE IN CREDITS*/
 	display:flex;
 	justify-content: space-around;
 	flex-direction: row;
@@ -110,6 +112,60 @@ header{
 	width:80%;
 	height: 80%;
 }
+/* GAME */
+.rowgame{ /*ALSO USE IN CREDITS*/
+	display:flex;
+	justify-content: space-evenly;
+	flex-direction: row;
+	margin-top:10%;
+	margin-left:0;
+}
+.coregame{
+	margin:0% 5% 0% 5%;
+}
+.column{
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+}
+#version-h3{
+	margin-left:0px;
+}
+.dwl-button{
+	background-color:#4158D9;
+	border: solid 1px #4158D9;
+	width:120%;
+	height:120%;
+}
+.dwl-a{
+	font-size:20px;
+	color:white;
+	margin: 2%;
+  	-webkit-text-stroke: 2px #4158D9;
+  	letter-spacing: 0.1rem;
+}
+.dwl-button:hover{
+	background-color:white;
+	>.dwl-a{
+		color:#4158D9;
+	}
+}
 
-
-
+.dwl-button-r{
+	background-color:white;
+	border: solid 1px white;
+	width:120%;
+	height:120%;
+}
+.dwl-a-r{
+	font-size:20px;
+	color:#4158D9;
+	margin: 2%;
+  	letter-spacing: 0.1rem;
+}
+.dwl-button-r:hover{
+	background-color:#4158D9;
+	>.dwl-a-r{
+		color:white;
+	}
+}
