--- a/styles/style2.css
+++ b/styles/style2.css
@@ -161,6 +161,13 @@ header{
 	margin-top:10%;
 	margin-left:0;
 }
+.rowgame2{ /*ALSO USE IN CREDITS*/
+	display:flex;
+	justify-content: center;
+	flex-direction: row;
+	margin-top:0%;
+	margin-left:16%;
+}
 .coregame{
 	margin:0% 5% 0% 5%;
 }
@@ -168,6 +175,11 @@ header{
 	display:flex;
 	flex-direction: column;
 	justify-content: center;
+}
+.column2{
+	display:flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 #version-h3{
 	margin-left:0px;
