--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
  header{
-	padding: 50px 50px 10px 50px;
   	display: flex;
   	justify-content: center;
+	flex-direction: column;
   	align-items: center;
   	background-color: transparent;
-    	top: 0;
+    top: 0;
   	left: 0;
   	right: 0;
  }
@@ -18,7 +18,7 @@
 	display:flex;
 	flex-direction:row;
 	justify-content:center;
-	padding:10%;
+	padding:5% 10% 10% 10%;
 	width:auto;
 }
 
@@ -44,7 +44,9 @@
 	justify-content:space-around;
 }
 #nav-item{
-	font-size:40px;
+	font-size:45px;
+	font-weight: 600;
+	line-height: 4rem;
 	color:white;
   	-webkit-text-stroke: 2px #4158D9;
   	letter-spacing: .1rem;
