--- a/styles/style2.css
+++ b/styles/style2.css
@@ -191,6 +191,13 @@ header{
 	height:120%;
 }
 .dwl-a{
+	font-size:30px;
+	color:white;
+	margin: 2%;
+  	-webkit-text-stroke: 2px #4158D9;
+  	letter-spacing: 0.1rem;
+}
+.dwl-a2{
 	font-size:20px;
 	color:white;
 	margin: 2%;
