--- a/styles/global.css
+++ b/styles/global.css
@@ -31,7 +31,7 @@ h3{
     color:black;
 }
 p {
-    font-family: "inter";
+    font-family: "inter" sans-serif;
     font-size: 1.125rem;
     line-height: 1.5;
     color:black;
