--- a/styles/style.css
+++ b/styles/style.css
@@ -17,26 +17,27 @@
 .navbar1{
 	display:flex;
 	flex-direction:row;
-	justify-content:center;
-	padding:5% 10% 10% 10%;
+	justify-content:space-around;
+	padding:5% 10% 10% 13%;
 	width:auto;
 }
 
 .s1{
 	display:flex;
 	flex-direction:column;
-	margin:5px;
+	padding:20px;
 }
 .s2{
-        display:flex;
-        flex-direction:column;
-        margin:5px;
+    display:flex;
+    flex-direction:column;
+	justify-content:center;
+	padding:20px;
 
 }
 .s3{
-        display:flex;
-        flex-direction:column;
-        margin:5px;
+    display:flex;
+    flex-direction:column;
+	padding:20px;
 }
 .s4{
 	display:flex;
@@ -51,6 +52,7 @@
   	-webkit-text-stroke: 2px #4158D9;
   	letter-spacing: .1rem;
 }
+
 #nav-item:hover{
         color:#4158D9;
 }
