--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
- header{
-  	display: flex;
+ .head1{
+	display: flex;
   	justify-content: center;
 	flex-direction: column;
   	align-items: center;
@@ -7,6 +7,17 @@
     top: 0;
   	left: 0;
   	right: 0;
+ }
+ .head2{
+	display: flex;
+  	justify-content: center;
+	flex-direction: row;
+  	align-items: center;
+  	background-color: transparent;
+    top: 0;
+  	left: 0;
+  	right: 0;
+	
  }
 
 #logo1{
