--- a/styles/style2.css
+++ b/styles/style2.css
@@ -76,80 +76,24 @@ header{
 	margin:0 0 0 35%;
 	letter-spacing: 0.1rem;
 }
-
-/* CREDITS */
-.container-lc{
-	display:flex;
-	justify-content:center ;
-	height:30%;
-	width:40%;
-	margin:5%;
-}
-#info{
-	color: black;
-	opacity: 0;
-	transform: translateY(30%) translateX(-200%);
-	transition: 0.5s;
-}
-.container-lc:hover {
-	> #info{
-		opacity:1;
-	}
-	>.img{
-		opacity:0;
-	}
-}				
-
-
-#logo-unity{
-	padding-top:15%;
-}
-#logo-rider{
-	width:90%;
-	height:90%;
-}
-#logo-github{
-	width:60%;
-	height:60%;
-	padding-top:5%;
-	padding-bottom:5%;
-}
-#logo-vercel{
-	padding-top:20%;
-	padding-bottom:20%;
-}
-#logo-discord{
-	width:65%;
-	height: 80%;
-}
-#logo-sublimtext{
-	width:80%;
-	height: 80%;
-}
-#logo-figma{
-	width:80%;
-	height: 80%;
-}
-#logo-dicebear{
-	width:50%;
-	height:50%;
-	margin-top:10%;
-	padding-bottom:10%;
-}
-#logo-assetstore{
-	width:100%;
-	height:100%;
-	margin-top:30%;
-	padding-bottom:30%;
-}
-#logo-blender{
-	margin-top:10%;
-}
-#logo-affinity{
-	width:50%;
-	height:50%;
-}
 /* GAME */
+.core-div{
+	display:flex;
+	flex-direction: row;
+	justify-content: center;
+}
+.core-div div{
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	width : 40%;
+}
+#img-planet{
+	width: 100%;
+}
+
+
+/* download */
 .rowgame{ /*ALSO USE IN CREDITS*/
 	display:flex;
 	justify-content: space-evenly;
