--- a/styles/style2.css
+++ b/styles/style2.css
@@ -3,10 +3,9 @@ header{
   	justify-content: center;
   	align-items: center;
   	background-color: transparent;
-  	border-bottom: solid 1px #4158D9;
     
 }
-.navbar2{
+.navbar1{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -18,22 +17,20 @@ header{
 }
 
 .nav-item{
-	font-size:40px;
-	color:white;
-	margin: 2% 2% 3% 2%;
-  	-webkit-text-stroke: 2px #4158D9;
+	font-size:20px;
+	color:#4158D9;
+	margin: 16px 8px;
 }
 #nav-present{
-	-webkit-text-stroke: 2px #ECD14E;
 	color:#ECD14E;
 	letter-spacing: .1rem;
 }
 #nav-present:hover{
-	color:white;
+	color: #4158D9;
 	letter-spacing: .1rem;
 }
 .nav-item:hover{
-        color:#4158D9;
+        color:#ECD14E;
 }
 #nav-download{
 	font-size:40px;
@@ -44,8 +41,11 @@ header{
 #nav-download:hover{
 	color:white;
 }
-
 .core{
+	margin:0% -2% 0% -2%;
+}
+
+.core-in{
 	margin:0% 5% 0% 5%;
 }
 /*TEAM STUDIO*/ 
@@ -77,20 +77,7 @@ header{
 	letter-spacing: 0.1rem;
 }
 /* GAME */
-.core-div{
-	display:flex;
-	flex-direction: row;
-	justify-content: center;
-}
-.core-div div{
-	display:flex;
-	flex-direction: column;
-	justify-content: center;
-	width : 40%;
-}
-#img-planet{
-	width: 100%;
-}
+
 
 
 /* download */
