--- a/styles/style.css
+++ b/styles/style.css
@@ -107,6 +107,14 @@ iframe { /*trailer*/
 	width : 40%;
 	margin: 3%;
 }
+
+.core-div-video{
+	display:flex;
+	flex-direction: row;
+	justify-content: center;
+	border-radius: 20px;
+	margin: 5% 5% 0% 5%;
+}
 #img-screen{
 	width: 100%;
 }
@@ -210,7 +218,7 @@ header{
 	color:white;
 }
 .core{
-	margin:0% 0px 0% 0px;
+	margin:0%;
 }
 
 .core-in{
